--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">compose_pra</string>
     <string name="title_activity_box">BoxActivity</string>
+    <string name="title_activity_list">ListActivity</string>
 </resources>
